bug fixed
overlapping ryu fixed. StreetFighter + Instructions need to be added

--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,12 @@ body {
 	height: 494px;
 }
  
-.ryu-still, .ryu-ready, .ryu-throwing {
+.ryu-still, .ryu-ready, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
 }
  
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
 }
  
@@ -39,8 +39,12 @@ body {
  
 .ryu-throwing {
 	background-image: url('../images/ryu-throwing-hadouken.png');
-	
 }
+
+.ryu-cool {
+	background-image: url('../images/ryu-cool.gif');
+}
+
  
 .hadouken, .ryu-still, .ryu-ready, .ryu-throwing {
 	background-repeat: no-repeat;
